# LearnCpp

./: CMakeLists.txt  README.md  project1.cpp
project1/: main.cpp
project2/: main.cpp
project3/: main.cpp
project3/mathlib/: basic.cpp  basic.h  stats.cpp  stats.h  trig.cpp  trig.h
